--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,7 @@ a.link:hover {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 50%;
+  width: 60%;
   margin: auto;
   justify-content: space-around;
   font-family: "Spectral", serif;
@@ -62,21 +62,33 @@ a.link:hover {
   border: 1px solid #000;
   box-shadow: 5px 5px 15px 3px rgba(0, 0, 0, 0.24);
   background-color: white;
-  width: 25%;
+  width: 20%;
+  height: 30vh;
+  max-height: 25vh;
   max-width: 500px;
   margin: 0 10px 30px 10px;
   text-align: center;
   font-size: 18px;
   padding: 20px 8px;
 }
+.book-card:hover {
+  opacity: 0.5;
+  cursor: pointer;
+  transition: ease-in-out 0.3s;
+  transform: scale(1.1);
+  border:none;
+}
 .book-title {
   font-weight: bold;
+  font-size: 16px;
 }
 
 .book-author {
   color: #141313;
   text-decoration: underline;
   font-family: "Spectral", serif;
+  font-size: 14px;
+
 }
 .back {
   padding: 15px;
