--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,178 @@
+* {
+  box-sizing: border-box;
+  font-family: "Spectral", serif;
+}
+html {
+  height: 100%;
+  width: 100%;
+	scroll-behavior: smooth;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Spectral", serif;
+  margin: 0;
   height: 100%;
+  overflow-x: hidden;
 }
 
+h1,
+h2 {
+  letter-spacing: 1px;
+  font-family: "Spectral", serif;
+  margin: 50px auto;
+}
+
+h1 {
+  font-size: 65px;
+  font-weight: 300;
+  color: #222;
+  margin: 50px auto;
+}
+@media only screen and (max-width: 768px) {
+    h1 {
+      font-size: 30px;
+}
+}
+h4 {
+  margin: 16px 0;
+  font-family: "Spectral", serif;
+}
+
+p {
+  margin: 0;
+  color: rgba(0, 0, 0, 0.87);
+  font-family: "Spectral", serif;
+}
+
+.banner-p {
+  color: #fafafa;
+}
+
+main {
+  max-width: 640px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  padding: 24px;
+}
+
+.div-error {
+  background: rgba(226, 117, 117, 0.15);
+  border: 1px solid #e27575;
+  border-radius: 5px;
+  padding: 5px 16px;
+  color: #ce1e1e;
+  margin: 10px;
+}
+
+/* INPUT  */
+button,
+input {
+  font-family: "Spectral", serif;
+  font-size: 1.2rem;
+  color: rgba(0, 0, 0, 0.87);
+}
+
+/*  BUTTON */
+button {
+  padding: 12px 16px;
+  border: none;
+  border-radius: 5px;
+  font-weight: 600;
+  outline: 0;
+}
+
+/* = PRIMARY BUTTON = */
+.button-primary {
+  background-color: #222;
+  color: #fff;
+}
+.button-primary:hover {
+  background-color: rgb(113, 165, 148);
+}
+.button-primary:active {
+  background-color: #222;
+}
+.button-primary:focus {
+  box-shadow: inset 0 0 0 3px #222, inset 0 0 0 5px #fff;
+}
+
+/* SECONDARY BUTTON */
+.button-secondary {
+  border: 2px solid #222;
+  background-color: #fff;
+  color: #222;
+  min-width: 15%;
+  margin: 10px auto;
+}
+.button-secondary:hover {
+  background-color: #d1f0eb;
+}
+.button-secondary:active {
+  background-color: rgb(161, 206, 191);
+}
+.button-secondary:focus {
+  border: 3px solid #222;
+  box-shadow: inset 0 0 0 2px #fafafa;
+}
+hr {
+  height: 1px;
+  margin: 15px auto;
+  border: none;
+  width: 80%;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+}
+
+.column,
+form {
+  display: flex;
+  flex-direction: column;
+  margin: 20px auto;
+  position: relative;
+}
+
+form {
+  padding: 16px 0;
+  margin: 0 auto;
+}
+
+form label {
+  display: flex;
+  flex-direction: column;
+  margin: 8px 0 8px 0;
+}
+
+form button {
+  margin-top: 32px;
+}
+
+.p-label {
+  padding-bottom: 10px;
+  margin: auto;
+  font-weight: 600;
+  text-transform: uppercase;
+  font-weight: lighter;
+  letter-spacing: 1.5px;
+  margin-top: 5px;
+}
+
+/* TEXT INPUT */
+
+input {
+  padding: 12px 16px;
+  border: 2px solid rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  outline: 0;
+}
+
+input:active {
+  box-shadow: 0 0 0 2px #222;
+}
+
+input:focus {
+  box-shadow: 0 0 0 1px #fafafa;
+  border: 1px solid #222;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
@@ -58,6 +223,7 @@ a.link:hover {
   justify-content: space-around;
   font-family: "Spectral", serif;
 }
+
 .book-card {
   border: 1px solid #000;
   box-shadow: 5px 5px 15px 3px rgba(0, 0, 0, 0.24);
@@ -81,6 +247,7 @@ a.link:hover {
 .book-title {
   font-weight: bold;
   font-size: 16px;
+  text-align: left;
 }
 
 .book-author {
@@ -88,7 +255,94 @@ a.link:hover {
   text-decoration: underline;
   font-family: "Spectral", serif;
   font-size: 14px;
-
+  text-align: left;
+}
+@media only screen and (max-width: 480px) {
+  .all-books {
+    width: 100%;
+    margin: 0;
+    min-height: 25vh;
+    justify-content: space-evenly;
+}
+.book-card {
+  width: 40%;
+  margin: 0 10px 10px 10px;
+  text-align: left;
+  font-size: 15px;
+  padding: 10px 8px;
+}
+.book-card:hover {
+  opacity: 0.5;
+  cursor: pointer;
+  transition: ease-in-out 0.3s;
+  border:none;
+}
+}
+@media only screen and (max-width: 768px) {
+  .all-books {
+    width: 100%;
+    margin: auto;
+    min-height: 25vh;
+    justify-content: space-evenly;
+}
+.book-card {
+  min-width: 30%;
+  min-height: 35vh;
+  margin: 0 7px 10px;
+  text-align: left;
+  font-size: 15px;
+  padding: 10px 8px;
+}
+.book-card:hover {
+  opacity: 0.5;
+  cursor: pointer;
+  transition: ease-in-out 0.3s;
+  border:none;
+}
+}
+@media only screen and (max-width: 1024px) {
+  .all-books {
+    width: 100%;
+    margin: auto;
+    min-height: 20vh;
+    justify-content: space-evenly;
+}
+.book-card {
+  min-width: 30%;
+  min-height: 30vh;
+  margin: 0 7px 10px;
+  text-align: left;
+  font-size: 15px;
+  padding: 10px 8px;
+}
+.book-card:hover {
+  opacity: 0.5;
+  cursor: pointer;
+  transition: ease-in-out 0.3s;
+  border:none;
+}
+}
+@media only screen and (max-width: 1200px) {
+  .all-books {
+    width: 100%;
+    margin: auto;
+    min-height: 25vh;
+    justify-content: space-evenly;
+}
+.book-card {
+  min-height: 20vh;
+  width: 35%;
+  margin: 0 7px 10px;
+  text-align: left;
+  font-size: 15px;
+  padding: 10px 8px;
+}
+.book-card:hover {
+  opacity: 0.5;
+  cursor: pointer;
+  transition: ease-in-out 0.3s;
+  border:none;
+}
 }
 .back {
   padding: 15px;
