--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,8 @@ main {
   padding: 5px 16px;
   color: #ce1e1e;
   margin: 10px;
+  width: fit-content;
+  margin: 0 auto;
 }
 
 /* INPUT  */
@@ -86,6 +88,10 @@ button {
 .button-primary {
   background-color: #222;
   color: #fff;
+  font-weight: initial;
+  text-transform: uppercase;
+  font-family: "Spectral", serif;
+  letter-spacing: 2px;
 }
 .button-primary:hover {
   background-color: rgb(113, 165, 148);
@@ -104,6 +110,7 @@ button {
   color: #222;
   min-width: 15%;
   margin: 10px auto;
+  font-weight: lighter;
 }
 .button-secondary:hover {
   background-color: #d1f0eb;
@@ -225,7 +232,7 @@ a.link:hover {
 }
 
 .book-card {
-  border: 1px solid #000;
+  border: 1px solid #f0f0f0;
   box-shadow: 5px 5px 15px 3px rgba(0, 0, 0, 0.24);
   background-color: white;
   width: 20%;
@@ -244,6 +251,15 @@ a.link:hover {
   transform: scale(1.1);
   border:none;
 }
+.book-image {
+  width: 200px;
+  height: 300px;
+  z-index: 10;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 20px;
+}
 .book-title {
   font-weight: bold;
   font-size: 16px;
@@ -252,10 +268,14 @@ a.link:hover {
 
 .book-author {
   color: #141313;
-  text-decoration: underline;
+  text-decoration: none;
   font-family: "Spectral", serif;
-  font-size: 14px;
+  font-size: 16px;
   text-align: left;
+}
+.book-rating {
+  font-family: 'Lato', sans-serif;
+  margin-bottom: 15px;
 }
 @media only screen and (max-width: 480px) {
   .all-books {
@@ -343,6 +363,21 @@ a.link:hover {
   transition: ease-in-out 0.3s;
   border:none;
 }
+}
+.book-genre {
+  text-transform: uppercase;
+  font-family: 'Lato', sans-serif;
+  align-items: center;
+  text-align: center;
+  font-weight: 400;
+  color: #2b2b2b;
+  background-color: #18c3985b;
+  padding: 2px;
+  width: fit-content;
+  margin: 2px;
+  text-transform: uppercase;
+  font-size: 12px;
+  letter-spacing: 1.2px;
 }
 .back {
   padding: 15px;
