--- a/src/index.css
+++ b/src/index.css
@@ -92,6 +92,7 @@ button {
   text-transform: uppercase;
   font-family: "Spectral", serif;
   letter-spacing: 2px;
+  margin-top: 25px;
 }
 .button-primary:hover {
   background-color: rgb(113, 165, 148);
@@ -122,6 +123,18 @@ button {
   border: 3px solid #222;
   box-shadow: inset 0 0 0 2px #fafafa;
 }
+.welcome {
+  display: block;
+  flex-direction: row;
+  flex-wrap: wrap;
+  text-align: center;
+  padding: 100px;
+  align-items: center;
+  justify-content: center;
+  margin: 100px auto;
+  font-size: 20px;
+}
+
 hr {
   height: 1px;
   margin: 15px auto;
@@ -258,7 +271,9 @@ a.link:hover {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+
 }
 .book-title {
   font-weight: bold;
