--- a/src/index.css
+++ b/src/index.css
@@ -260,16 +260,8 @@ a.link:hover {
   display: flex;
   flex-direction: column;
   min-height: 20vh;
-  width: 20%;
+  width: 25%;
   border: 1px solid #f0f0f0;
-}
-@media only screen and (max-width: 1024px) {
-  .book-card-all {
-    width: 100%;
-    margin: auto;
-    min-height: 20vh;
-    justify-content: space-evenly;
-  }
 }
 .book-card:hover {
   opacity: 0.5;
@@ -333,6 +325,12 @@ a.link:hover {
 .book-rating {
   font-family: "Lato", sans-serif;
   margin-bottom: 15px;
+}
+.random-num {
+  color: #fe0072;
+  font-size: 25px;
+  text-align: center;
+  letter-spacing: 1.2px;
 }
 @media only screen and (max-width: 480px) {
   .all-books {
