--- a/src/index.css
+++ b/src/index.css
@@ -126,6 +126,8 @@ button {
   justify-content: center;
   margin: 100px auto;
   font-size: 20px;
+  border: 1px solid #222;
+  width: 80%;
 }
 @media only screen and (max-width: 768px) {
   .welcome {
